# fingr

./: .dockerignore  .gitignore  DOCKER_SETUP.md  Dockerfile  Dockerfile.distroless  Dockerfile.python  Dockerfile.ubuntu  PROMETHEUS_METRICS.md  Pipfile  README.md  REFACTORING.md  TROUBLESHOOTING.md  USAGE.md  cleanup-cache.sh  compose.yaml  deny.txt-example  fingr.py  fingr_refactored.py  fingr_test.py  legacy.txt  motd.txt  motd.txt-example  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run-with-metrics.sh  server.py  setup.py  test_asyncio.py  test_feelslike.py  test_lib.py  test_location.py  test_metno.py  test_metrics.py  tox.ini  useragent.txt-example
.github/workflows/: docker-image.yml  govulncheck.yml
etc/: clean_data.sh  finger.service
etc/grafana/provisioning/dashboards/: dashboards.yml  fingr-dashboard.json
etc/grafana/provisioning/datasources/: prometheus.yml
etc/prometheus/: prometheus.yml
fingr/: __init__.py  config.py  formatting.py  geoip.py  location.py  logging.py  metrics.py  server.py  utils.py  weather.py
grafana/provisioning/dashboards/: fingr-dashboard.json  fingr-map-dashboard.json
pre_project_tests/: test_asyncio.py  test_graph.py  test_solar.py
test/: __init__.py
