[project]
name = "fingr"
version = "1.0.0"
description = "Finger server, serving weather forecast based on location input"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Lars Falk-Petersen", email = "dev@falkp.no"}
]
keywords = ["finger", "weather"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Topic :: Internet :: Finger",
]

dependencies = [
    "metno-locationforecast~=2.1.0",
    "geopy~=2.4.0",
    "redis~=7.1.0",
    "async_timeout~=5.0.0", # redis dep
    "pysolar~=0.13",
    "timezonefinder~=8.2.0",
    "pytz~=2025.2",
    "structlog~=25.5.0",
    "prometheus-client~=0.23.0",
    "urllib3>=2.6.3", # vuln in 2.6.2
]

[project.optional-dependencies]
dev = [
    "bandit",
    "tox",
    "ruff",
    "types-pytz",
    "types-redis",
    "fakeredis",
    "ty",
]

[project.urls]
Homepage = "https://github.com/ways/fingr"
Repository = "https://github.com/ways/fingr"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Tox configuration
[tool.tox]
requires = ["tox>=4", "tox-uv"]
env_list = ["py", "ruff-format", "ruff-check", "bandit", "ty"]

[tool.tox.env_run_base]
description = "Run unit tests"
extras = ["dev"]
commands = [["python3", "-m", "unittest", "fingr_test.py"]]

[tool.tox.env.ruff-check]
description = "Run ruff linter"
deps = ["ruff"]
commands = [["ruff", "check", "--fix", "{toxinidir}/fingr/", "{toxinidir}/fingr.py"]]

[tool.tox.env.ruff-format]
description = "Check code formatting with ruff"
deps = ["ruff"]
commands = [["ruff", "format", "{toxinidir}/fingr/", "{toxinidir}/fingr.py"]]

[tool.tox.env.mypy]
description = "Check typing"
deps = ["mypy", "types-pytz"]
commands = [["mypy", "--follow-imports", "skip", "{toxinidir}/fingr/", "{toxinidir}/fingr.py"]]

[tool.tox.env.bandit]
description = "Check for security issues"
deps = ["bandit"]
commands = [["bandit", "-r", "{toxinidir}/fingr/", "{toxinidir}/fingr.py"]]

[tool.tox.env.ty]
description = "Type check with ty"
deps = ["ty"]
commands = [["ty", "check", "{toxinidir}/fingr/", "{toxinidir}/fingr.py"]]
